$Rev$
[2007/09/17]
FindInFiles.py DirBrowser.py
                    Improve Find in Files process with thread
mEditorCtrl.py      If save file failed, then invoke save as
ScriptDialog.py ShellDialog.py
                    Fix shortcuts from 1-based bug
plugin_spec.txt     Update document
mLineending.py Editor.py
                    Fix line end mix checking bug also including twice prompt dialog bug
                    
[2007/09/15]
DirBrowser.py       Fix directory browser insert node bug
Editor.py mUnicode.py
                    Don't create a tmp file again, directly save the file
mClassBrowser.py    Add option to control if show the docstring in class browser window.
                    rename OutlookBrowser.py to OutlineBrowser.py
meide.py            Update to latest version
PrefDialog.py       Improve pref dialog creation, and support custom meide control.
FindInFiles.py      Change Find in Files dialog to panel
                    
[2007/09/09]
pyflakes SyntaxCheck.py
                    Update to svn version
[2007/09/08]
Entry.py            Rewrite the code with meide module

[2007/09/06]
DirBrowser.py       Fix refresh bug

[2007/09/02]
EditorFactory.py Editor.py
                    Fix open un-exists file will popup two message dialog bug
DirBrowser.py       Fix adding empty directory error
                    
[2007/09/01]
DirBrowser.py 
                    Fix adding empty directory error
                    
[2007/08/29]
ScriptDialog.py ShellDialog.py mScript.py mShell.py
                    Add script and shell key binding. Change shell to external tool
ShellWindow.py      Add Alt+Enter implement the same functionality of Ctrl+Enter
                    
[2007/08/29]
CheckList.py *      CheckList improvement.

[2007/08/28]
SvnSupport.py       Remove box.AddStretchSpacer invoke, replaced to StaticBoxSizer
ShellDialog.py ScriptDialog.py Entry.py
                    Fix dialog bug
mPyRun.py           Add copy and run in shell feature