@@ -1,4 +1,7 @@
 $Rev$
+[2007/09/19]
+SvnSupport.py       Fix svn_plugin crash in Linux
+
 [2007/09/17]
 FindInFiles.py DirBrowser.py
                     Improve Find in Files process with thread
